--- a/China.yaml
+++ b/China.yaml
@@ -95,3 +95,4 @@ payload:
   - DOMAIN,mpaas-component-mgs4zwy.aliyuncs.com
   - DOMAIN,px-itrace.xuexi.cn
   - DOMAIN,umid.xuexi.cn
+  - long-term-cache.xuexi.cn
