--- a/China.yaml
+++ b/China.yaml
@@ -95,6 +95,6 @@ payload:
   - DOMAIN,mpaas-component-mgs4zwy.aliyuncs.com
   - DOMAIN,px-itrace.xuexi.cn
   - DOMAIN,umid.xuexi.cn
-  - long-term-cache.xuexi.cn
-  - assets-mini.xuexi.cn
+  - DOMAIN,long-term-cache.xuexi.cn
+  - DOMAIN,assets-mini.xuexi.cn
   - DOMAIN,assets.xuexi.cn
