--- a/China.yaml
+++ b/China.yaml
@@ -98,3 +98,4 @@ payload:
   - DOMAIN,long-term-cache.xuexi.cn
   - DOMAIN,assets-mini.xuexi.cn
   - DOMAIN,assets.xuexi.cn
+  - DOMAIN,arms-retcode.aliyuncs.com
